--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Muahammad Ali
-#logo: /assets/img/headshot_circle.png
-#description: text below image
+logo: /images/ali.jpeg
+description: Distributed Systems | VANET | IoV | Kubernetes
 #show_downloads: true
 theme: jekyll-theme-minimal
